force-app/src/objects/OrderApi__Renewal__c.object
<CustomObject>
    <description>Terms track the Subscription terms, dates for all Customer Subscriptions.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the Term to the Account</description>
        <inlineHelpText>Relates the Term to the Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Active_Assignments__c</fullName>
        <description>System Calculated ** Counts the number of assignments that are marked active for the term.</description>
        <inlineHelpText>System Calculated ** Counts the number of assignments that are marked active for the term.</inlineHelpText>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Allowed__c</fullName>
        <description>System Calculated ** The number of Assignments allowed for the term.</description>
        <inlineHelpText>System Calculated ** The number of Assignments allowed for the term.</inlineHelpText>
        <label>Assignments Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cancellation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the customer requests to cancel their membership. To enable this in the community, enable cancellations on the item.</description>
        <inlineHelpText>This field is checked when the customer requests to cancel their membership. To enable this in the community, enable cancellations on the item.</inlineHelpText>
        <label>Cancellation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the Term to the Contact</description>
        <inlineHelpText>Relates the Term to the Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Days_To_Lapse__c</fullName>
        <description>System Calculated ** Defines the remaining number of days until the end of the Term.</description>
        <inlineHelpText>System Calculated ** Defines the remaining number of days until the end of the Term.</inlineHelpText>
        <label>Days to Lapse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Dues_Total__c</fullName>
        <description>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</description>
        <inlineHelpText>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</inlineHelpText>
        <label>Dues Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</description>
        <inlineHelpText>System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Grace_Period_End_Date__c</fullName>
        <description>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</description>
        <inlineHelpText>This date is calculated by the Term End Date plus the number of days defined on the Subscription Plan&apos;s Grace Period field.</inlineHelpText>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the active subscription term.</description>
        <inlineHelpText>Defines the active subscription term.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System Calculated ** This field identifies terms that have been changed and needed a new term created as a result.</description>
        <inlineHelpText>System Calculated ** This field identifies terms that have been changed and needed a new term created as a result.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item.</description>
        <inlineHelpText>System Calculated Required Override ** Link to the primary &quot;Subscription&quot; Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Amendment_Date__c</fullName>
        <description>System Calculated ** The date the Subscription was last amended.</description>
        <inlineHelpText>System Calculated ** The date the Subscription was last amended.</inlineHelpText>
        <label>RESERVED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Next_Invoice_Due_Date__c</fullName>
        <description>System Calculated ** The date the next invoice is due for the Subscription.</description>
        <inlineHelpText>System Calculated ** The date the next invoice is due for the Subscription.</inlineHelpText>
        <label>Next Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Next_Scheduled_Payment_Date__c</fullName>
        <description>System Calculated ** The date the next payment is scheduled to be processed for the Subscription.</description>
        <inlineHelpText>System Calculated ** The date the next payment is scheduled to be processed for the Subscription.</inlineHelpText>
        <label>Next Scheduled Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Next_Term_Renewed_Date__c</fullName>
        <description>This field defines the date that the subscription term was renewed to a new term.</description>
        <inlineHelpText>This field defines the date that the subscription term was renewed to a new term.</inlineHelpText>
        <label>Next Term Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Previous_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Calculated ** Defines the next term to be activated as a result of a renewal purchase.</description>
        <inlineHelpText>System Calculated ** Defines the next term to be activated as a result of a renewal purchase.</inlineHelpText>
        <label>Previous Term</label>
        <referenceTo>OrderApi__Renewal__c</referenceTo>
        <relationshipLabel>Next Term</relationshipLabel>
        <relationshipName>Next_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewal_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Calculated ** The Sales Order defined in this field was generated by the system for the next renewal.</description>
        <inlineHelpText>System Calculated ** The Sales Order defined in this field was generated by the system for the next renewal.</inlineHelpText>
        <label>Renewal Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>RenewalSalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewed_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the customer renewed the Subscription.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the customer renewed the Subscription.</inlineHelpText>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Related Sales Order Line(source).</description>
        <inlineHelpText>** System Calculated ** Related Sales Order Line(source).</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Related Sales Order (source).</description>
        <inlineHelpText>** System Calculated ** Related Sales Order (source).</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Calculated Required Override ** Link to the Subscription Plan.</description>
        <inlineHelpText>System Calculated Required Override ** Link to the Subscription Plan.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <description>** System Calculated Required ** Link to related Subscription</description>
        <inlineHelpText>** System Calculated Required ** Link to related Subscription</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_End_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the term ends.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the term ends.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Start_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the term begins.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the term begins.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <label>Term</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>